--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <main>
         <div id="main-div">
             <div id="img-div">
-                <h1></h1>
-                <img src="images/image (1).svg" alt="" title="" id="photos-id">
+                <img src="images/image (2).svg" alt="" title="" id="photos-id">
             </div>
             <div id="main-text-div">
                 <h1 id="main-text-div-h1">Be the first to know when we launch</h1>
@@ -26,9 +25,9 @@
                 <div id="sabmit-form-div">
                     <h1 id="main-text-div-two-h1">Submit form</h1>
                     <label for="sabmit-form-text-input" id="sabmit-form-text-input-label" >Full name</label>
-                    <input type="text" id="sabmit-form-text-input" value="Please write you name">
+                    <input type="text" id="sabmit-form-text-input" placeholder="Please write you name">
                     <label for="sabmit-form-email-input" id="sabmit-form-text-input-label-two">Email</label>
-                    <input type="email" id="sabmit-form-email-input" value="Please write your Email">
+                    <input type="email" id="sabmit-form-email-input" placeholder="Please write your Email">
                 </div>
                 <div id="main-text-div-three">
                     <p id="main-text-div-three-p">Would you recomment GeeksforGeeks to a friends?</p>
